maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:20: error: ')' expected but ';' found.
      if (estMurNord() && (getPosY() < minY || minY == -1) minY = getPosY();
                                                                           ^